--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -699,6 +699,7 @@ set(SOURCES
         db/merge_operator.cc
         db/output_validator.cc
         db/periodic_work_scheduler.cc
+        db/promotion_cache.cc
         db/range_del_aggregator.cc
         db/range_tombstone_fragmenter.cc
         db/repair.cc
