--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -698,7 +698,7 @@ set(SOURCES
         db/merge_operator.cc
         db/output_validator.cc
         db/periodic_task_scheduler.cc
-        db/promotion_cache.cc
+        db/promotion_buffer.cc
         db/range_del_aggregator.cc
         db/range_tombstone_fragmenter.cc
         db/repair.cc
